# mem0-local

./: .gitignore  README.md  pyproject.toml
examples/: config.toml
skills/local-memory/: SKILL.md
skills/local-memory/agents/: openai.yaml
skills/local-memory/references/: commands.md  imports.md  troubleshooting.md
src/mem0_local/: __init__.py  audit.py  backfill_metadata.py  cli.py  config.py  daemon.py  ingest_ledger.py
tests/: test_audit.py  test_cli_daemon.py  test_daemon.py
